<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newExerciseConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.Toolbar"
    tools:context=".activity.exercise.NewExerciseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/newExerciseToolBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/orange_d39"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <androidx.cardview.widget.CardView
        android:id="@+id/newExerciseCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        app:cardBackgroundColor="@color/grey_neutral"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newExerciseSelectCategoryTextView" >
        <Spinner
            android:id="@+id/newExerciseSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:prompt="@string/spinner_prompt"
            android:spinnerMode="dialog"
            android:textAlignment="center"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/newExerciseImageView"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/content_description_image_new_exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newExerciseCardView"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/newExerciseEditTextMultiLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/observation_text_hint"
        android:inputType="textMultiLine"
        android:textColor="@color/gray_585"
        android:textColorHint="@color/gray_585"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/newExerciseLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newExerciseImageView"
        tools:ignore="Autofill" />

    <LinearLayout
        android:id="@+id/newExerciseLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/newExerciseCancelButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_bf5"
            android:text="@string/cancel_text_button"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle">

        </Button>

        <Button
            android:id="@+id/newExerciseSaveButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:backgroundTint="@color/blue_bf5"
            android:text="@string/save_text_button"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle">

        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/newExerciseSelectCategoryTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/select_category_exercise_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newExerciseToolBar" />

</androidx.constraintlayout.widget.ConstraintLayout>