<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newTrainingConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewTraining">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/newTrainingToolBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/orange_d39"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <EditText
        android:id="@+id/newTrainingEditTextMultiLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_new_training_text_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/newTrainingLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTrainingToolBar">

    </EditText>

    <LinearLayout
        android:id="@+id/newTrainingLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/newTrainingCancelButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_bf5"
            android:text="@string/cancel_text_button"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle">

        </Button>

        <Button
            android:id="@+id/newTrainingSaveButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_bf5"
            android:layout_marginStart="80dp"
            android:text="@string/save_text_button"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle">

        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>